<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="rtl"
    android:background="@color/default_grey_color">

    <LinearLayout
        android:background="@drawable/yellow_back_border"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


            <LinearLayout
                android:id="@+id/dish_name_itemsBagdetails_textView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingTop="10dp"
               >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="9dp"
                     android:fontFamily="@font/stv_bold"
                    android:text="@string/serial_number_itemMyOrders"
                    android:textColor="@color/black_color"
                    android:textSize="16sp"
                    />
                <TextView
                    android:id="@+id/serial_number_itemMyOrders_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="20dp"
                    android:ellipsize="end"
                    android:gravity="right"
                     android:fontFamily="@font/stv_bold"
                    android:textColor="@color/black_color"
                    android:textSize="16sp"
               />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="9dp"
                    android:text="@string/total_order_price_itemMyOrders"
                    android:textColor="@color/black_color"
                     android:fontFamily="@font/stv_bold"
                    android:textSize="16sp"
                     />

                <TextView
                    android:id="@+id/total_order_price_itemMyOrders_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="20dp"
                    android:ellipsize="end"
                    android:gravity="right"
                    android:textColor="@color/black_color"
                     android:fontFamily="@font/stv_bold"
                    android:textSize="16sp"
                   />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="9dp"
                     android:fontFamily="@font/stv_bold"
                    android:text="@string/order_date_itemMyOrders"
                    android:textColor="@color/black_color"
                    android:textSize="16sp"
                   />

                <TextView
                    android:id="@+id/order_date_itemMyOrders_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:ellipsize="end"
                    android:gravity="right"
                    android:textColor="@color/black_color"
                    android:textSize="16sp"
                     android:fontFamily="@font/stv_bold"
                 />
            </LinearLayout>
        <Button
            android:id="@+id/remove_itemMyOrders_button"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:background="@drawable/yellow_color_rectangle"
             android:fontFamily="@font/stv_bold"
            android:text="@string/cancel_item_my_order"
            android:textColor="@color/white_color"
            android:textSize="16sp"
            android:layout_gravity="left"
            />

        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>